# fudl

./: .env.example  .gitignore  README.md  agents.md  docker-compose.yml  package.json  requests.http  turbo.json
.envoy/: config.toml  latest
.github/: dependabot.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/config/: index.ts
apps/api/src/lib/: index.ts  queues.ts  redis.ts  s3.ts
apps/api/src/middleware/: auth.ts  error.ts  index.ts
apps/api/src/queues/: video-analysis.ts
apps/api/src/routes/: analysis.ts  health.ts  index.ts
apps/api/src/types/: index.ts
apps/docs/: package.json
apps/docs/app/: layout.tsx  page.tsx
apps/mitt-model/: .gitignore  package.json  pyproject.toml
apps/mitt-model/src/mitt_model/: __init__.py  __main__.py  main.py
apps/mitt-model/src/mitt_model/api/: __init__.py
apps/mitt-model/src/mitt_model/models/: __init__.py
apps/mitt-model/tests/: __init__.py
apps/mitt-worker/: .env.example  .gitignore  Dockerfile  package.json  pyproject.toml
apps/mitt-worker/.envoy/: config.toml  latest
apps/mitt-worker/src/mitt_worker/: __init__.py  __main__.py  video_frame.py  worker.py
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(authenticated)/: layout.tsx
apps/web/app/delete-account/: delete-account-content.tsx  page.tsx
apps/web/app/forgot-password/: forgot-password-content.tsx  page.tsx
apps/web/app/hooks/: use-jobs-stream.ts
apps/web/app/invite/: page.tsx
designs/: home.md  profile-settings.md  team-settings.md
(+71 files in other folders)
