[project]
name = "mitt-worker"
version = "0.1.0"
description = "BullMQ worker for video analysis jobs"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.9.1",
    "opencv-python>=4.12.0.88",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mitt_worker"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
